Disable module warning for GUI